// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contain renders 0 1`] = `
Array [
  .c0 {
  contain: 0;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 0;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 0;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders function 1`] = `
Array [
  .c0 {
  contain: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  contain: has;
}

<div
    className="c0"
  />,
  .c0 {
  contain: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  contain: has;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders invalid theme path 1`] = `
Array [
  .c0 {
  contain: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  contain: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  contain: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  contain: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders negative number 1`] = `
Array [
  .c0 {
  contain: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  contain: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  contain: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  contain: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  contain: July;
}

@media screen and (min-width:November) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  contain: July;
}

@media screen and (min-width:November) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  contain: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    contain: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  contain: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    contain: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    contain: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    contain: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    contain: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    contain: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    contain: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    contain: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  contain: July;
}

@media May {
  .c0 {
    contain: August;
  }
}

@media April {
  .c0 {
    contain: September;
  }
}

@media January {
  .c0 {
    contain: November;
  }
}

@media April {
  .c0 {
    contain: August;
  }
}

@media June {
  .c0 {
    contain: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  contain: July;
}

@media May {
  .c0 {
    contain: August;
  }
}

@media April {
  .c0 {
    contain: September;
  }
}

@media January {
  .c0 {
    contain: November;
  }
}

@media April {
  .c0 {
    contain: August;
  }
}

@media June {
  .c0 {
    contain: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  contain: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    contain: November;
  }
}

@media April {
  .c0 {
    contain: January;
  }
}

@media January {
  .c0 {
    contain: December;
  }
}

@media April {
  .c0 {
    contain: April;
  }
}

@media June {
  .c0 {
    contain: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  contain: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    contain: November;
  }
}

@media April {
  .c0 {
    contain: January;
  }
}

@media January {
  .c0 {
    contain: December;
  }
}

@media April {
  .c0 {
    contain: April;
  }
}

@media June {
  .c0 {
    contain: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    contain: July;
  }
}

@media April {
  .c0 {
    contain: August;
  }
}

@media January {
  .c0 {
    contain: September;
  }
}

@media April {
  .c0 {
    contain: November;
  }
}

@media June {
  .c0 {
    contain: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    contain: July;
  }
}

@media April {
  .c0 {
    contain: August;
  }
}

@media January {
  .c0 {
    contain: September;
  }
}

@media April {
  .c0 {
    contain: November;
  }
}

@media June {
  .c0 {
    contain: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    contain: January;
  }
}

@media April {
  .c0 {
    contain: December;
  }
}

@media January {
  .c0 {
    contain: April;
  }
}

@media April {
  .c0 {
    contain: May;
  }
}

@media June {
  .c0 {
    contain: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    contain: January;
  }
}

@media April {
  .c0 {
    contain: December;
  }
}

@media January {
  .c0 {
    contain: April;
  }
}

@media April {
  .c0 {
    contain: May;
  }
}

@media June {
  .c0 {
    contain: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders postitive number 1`] = `
Array [
  .c0 {
  contain: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  contain: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders string 1`] = `
Array [
  .c0 {
  contain: July;
}

<div
    className="c0"
  />,
  .c0 {
  contain: July;
}

<div
    className="c0"
  />,
  .c0 {
  contain: June;
}

<div
    className="c0"
  />,
  .c0 {
  contain: June;
}

<div
    className="c0"
  />,
]
`;

exports[`contain renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`contain renders valid theme path 1`] = `
Array [
  .c0 {
  contain: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  contain: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  contain: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  contain: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
